# FC_SDNN_GPU

./: CMakeLists.txt  README.txt.txt
Code/: ANN.cpp  ANN.h  B1_data.txt  B2_data.txt  B3_data.txt  B4_data.txt  BC.h  BC_Euler_1D.h  BC_Euler_2D.h  BC_LA_1D.h  BC_LA_3D.h  FC.cpp  FC.h  FC_1D.cpp  FC_1D.h  FC_2D.cpp  FC_2D.h  FC_3D.cpp  FC_3D.h  FC_data.h  IC.h  MVOperations.cpp  MVOperations.h  Mesh.h  Mesh1D.cpp  Mesh1D.h  Mesh2D.cpp  Mesh2D.h  Mesh3D.cpp  Mesh3D.h  Node.cpp  Node.h  PDE.h  Patch.cpp  Patch.h  Patch1D.cpp  Patch1D.h  Patch1DUniform.cpp  Patch1DUniform.h  Patch2D.cpp  (+49 more)
Code/include/: Ad5C27.txt  FC.h  Qd5C27.txt
Code/shocks/: shocks.advixeproj
Code/shocks/e000/: callstacks.def  e000.advixeexp  loop_hashes.def  settings.xml
Code/shocks/e000/hs002/: hs002.advixe  metrics.advisum  vectorization.advisum
Code/shocks/e000/hs002/config/: collection.cfg  context_values.cfg  runss.options
Code/shocks/e000/hs002/data.0/: 1259-1272.0-1272.0.th  1259-1272.0-1272.0.th.aux  1259-1272.0.trace  systemcollector-1259-emscat-head.sc
Code/shocks/e000/hs002/sqlite-db/: dicer.db
Code/shocks/e000/hs002/sqlite-db/_cache_grouper_data4_mix_by_instance/: container.metadata
Code/shocks/e000/trc000/: trc000.advixe
Code/shocks/e000/trc000/config/: collection.cfg  context_values.cfg  runtrc.options
Code/shocks/e000/trc000/data.0/: advixe-runtrc.txt  bandwidth_1629597501.hpc  tripcounts_1911_0.tcs
Code/src/: FC.cpp  Fonct_Gram_Blend.cpp
RelWithDebInfo/: Makefile
release/: CMakeCache.txt  Makefile  Test_shock_solver  cmake_install.cmake  gmon.out
(+4 files in other folders)
